<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4ECEC"
    tools:context=".AdminComments">

    <EditText
        android:id="@+id/edtAddComment"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/add_comment"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/btnAddComment"
        android:layout_width="38dp"
        android:layout_height="42dp"
        android:layout_below="@+id/edtAddComment"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-2dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/plus_button_new" />

    <Button
        android:id="@+id/btnclearcomments"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edtAddComment"
        android:layout_toStartOf="@+id/btnAddComment"
        android:layout_marginTop="-5dp"
        android:backgroundTint="#FF5722"
        android:text="clear"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="488dp"
        android:layout_below="@+id/btnAddComment"
        android:layout_marginTop="22dp"

        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <include layout="@layout/navbar" />

</RelativeLayout>