<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view"
    android:background="@drawable/background"
    tools:context=".SignIn">

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="#C9CEEA"
        android:backgroundTint="#C9CEEA"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#C9CEEA"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:shadowColor="@color/black"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_marginTop="10dp"
        android:background="#30ffffff"
        android:textColorLink="@color/black"
        android:shadowColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:background="#C9CEEA"
            android:textColorLink="@color/black"
            android:shadowColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/login" />

    <Button
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/forgot_password"
        android:textSize="10sp"
        tools:ignore="SmallSp" />


    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/choose_as_which_user_you_enter"
        android:textColor="@color/black" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RadioGroup"
        android:layout_below="@+id/txtUser"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAlignment="center"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_LFJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAlignment="center"
            android:checked="true"
            android:text="@string/looking_for_job"

            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_LFE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/looking_for_employees"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/socialicons"
        android:text="@string/or_sign_in_with" />


    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">


        <ImageView
            android:id="@+id/sign_in_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google"
            tools:ignore="ContentDescription" />

    </LinearLayout>




</RelativeLayout>