...



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navButtons"
        android:background="#E4ECEC"
        >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
...
                        android:textSize="15sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/AdminLayout"
                    android:layout_width="500dp"
                    android:layout_height="900dp"
                    android:layout_below="@+id/LayoutPostJob"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/background_with_shadow">

...
                        android:textColor="@color/white"
                        android:textSize="12sp"

                        />

                    <Button
                        android:id="@+id/AdminButtonComments"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/AdminButton"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="#FF5722"
...
