<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FF5722"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/txtWhichUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <Button
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        android:text="@string/enter_as_admin"
        android:id="@+id/btnAdmin"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="9sp"
        tools:ignore="SmallSp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navButtons"
        android:layout_below="@+id/txtWhichUser"
        android:layout_marginTop="5dp"
        android:background="#E4ECEC">


        <TextView
            android:id="@+id/txtJobType"
            style="bold"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/job_type"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/SpinJobsType"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobType"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:hint="@string/job_type"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:drawableEndCompat="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/SpinJobsLocation"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobType"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:hint="@string/location_of_job"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:drawableEndCompat="@drawable/ic_arrow" />


        <TextView
            android:id="@+id/txtLocation"
            style="bold"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/location_of_job"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/BtnSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/searchAnim"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btnsearch"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/search2" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/searchAnim"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txtJobType"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contactsRecView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/BtnSearch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:nestedScrollingEnabled="false" />


    </RelativeLayout>


    <include layout="@layout/navbar" />





</RelativeLayout>