<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#E4ECEC"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="20sp"
        android:textColor="@color/black"
       android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/search"
        android:padding="12dp"
        android:singleLine="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="text"
        android:autofillHints="@string/search" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:id="@+id/list_view"


        />


</LinearLayout>